# ares

./: .coverage  .dockerignore  .firebaserc  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  firebase.json  main.py  params.yaml  pyproject.toml  run.sh  s.json  schema.yaml  template.py  utils.py
.firebase/: hosting.cHVibGlj.cache
.github/workflows/: deploy.yml
.streamlit/: config.toml
api/: app.py  schemas.py  server.py
artifacts/cache/: geocode_cache.json  locality_class.json  schema.json  unit_density.json
artifacts/data/: raw.csv
artifacts/data_processing/: preprocessed_eval.csv  preprocessed_train.csv
artifacts/data_split/: train.csv
artifacts/data_validation/: status.txt
artifacts/feature_engineering/: class_pi.json  class_std.json  features_test.csv  features_train.csv  global_lux_median.json  global_ref.json  loc_bed_median.json  loc_iqr.json  loc_luxury_median.json  loc_pi.json  locality_stats.json
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: model.joblib
config/: config.yaml  schema.yaml
core/: common.py  config.py  logger.py  train.py  volatility.py
core/pipeline/: data.py  features.py  inference.py  model.py
data/: raw.csv
docs/: API.md  CONFIGURATION.md  DEVELOPMENT.md  OPERATIONS.md  README.md  TROUBLESHOOTING.md
experiments/: mlflow.db
lib/: features.py  llm.py  predict.py  train.py  utils.py
llm/: Dockerfile  app.py  cache.py  config.py  pyproject.toml  schemas.py
models/: metadata.json  model.joblib
notebooks/: 0 - Init Cleaning.ipynb  00_data_split.ipynb  01_data_cleaning.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  1 - Init Notebook.ipynb  1 - Phase 1 Insight.ipynb  1 - Phase 1.ipynb  2 - First Round Cleaning.ipynb  2 - Post Phase 1 Cleaning.ipynb  baseline.ipynb  catboost.ipynb  data_transformation.ipynb  data_validation.ipynb  hyperparameter_tuning.ipynb  modular_structure.ipynb  preprocessing.ipynb  trials.ipynb  xgboost.ipynb
pages/: Explorer.py  Predictor.py  Report.py
reports/: PHASE1_SUMMARY.md  data_schema.csv  neighborhood_summary.csv  schema_inspection.csv
src/ares/: __init__.py
src/ares.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ares/api/: main.py  (+1 more)
tests/: conftest.py  test_api.py  test_data_processing.py  test_data_processor.py  test_data_splitting.py  test_data_validation.py  test_feature_engineering.py  test_features.py  test_predict.py  test_utils.py
ui/: app.py  utils.py
ui/pages/: Explorer.py  Predictor.py  Report.py
(+24 files in other folders)
