[project]
name = "ares"
version = "0.1.0"
description = "ARES; a system to help estimate likely rent ranges for residential properties based on current online asking prices in the GA region"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "catboost",
    "googlemaps",
    "python-box",
    "pyYAML",
    "joblib",
    "beartype",
    "streamlit",
]

[dependency-groups]
dev = ["mlflow", "statsmodels", "xgboost", "tqdm", "notebook", "pytest", "matplotlib","scikit-learn",
    "seaborn"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ares"]
package-dir = {"" = "src"}