[project]
name = "ares"
version = "0.1.0"
description = "ARES; a system to help estimate likely rent ranges for residential properties based on current online asking prices in the GA region"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "catboost",
    "googlemaps",
    "pyYAML",
    "joblib",
    "streamlit",
    "scikit-learn",
    "mlflow",
    "python-dotenv",
    "pydantic",
    "requests",
    "plotly",
    "starlette",
]

[dependency-groups]
dev = ["pytest", "matplotlib", "seaborn"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "core.pipeline", "api", "ui"]
