[project]
name = "ares"
version = "0.2.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "pandas==2.1.1",
    "numpy==1.26.4",
    "catboost==1.2.8",
    "pyyaml==6.0.3",
    "joblib==1.5.3",
    "streamlit==1.52.2",
    "scikit-learn==1.8.0",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "groq>=1.2.0",
    "python-dotenv==1.2.1",
    "plotly==5.24.1",
    "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "basedpyright>=1.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lib*", "api*", "ui*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
